# ctdfjorder

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.txt  NEWS.rst  README.md  __init__.py  cli.py  ctdfjorder.py  loggersetup.py  meta.yaml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: ISSUE.yml
.github/workflows/: buildandpublish.yml  coverage.yml  documentation.yml  publish-to-pypi.yml  sphinxdocs.yml  tests.yml  unit_tests.yml
CTDFjorder/: CTDFjorder.py  __init__.py
CTDFjorder_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Samples/: FjordPhyto MASTER SHEET.csv
ctdfjorder/: AI.py  CTD.py  Mastersheet.py  _AI.py  __init__.py  __version__.py  castaway.py  cli.py  constants.py  ctdfjorder.py  ctdplot.py  loggersetup.py  rsk.py  utils.py
ctdfjorder/CTDExceptions/: CTDExceptions.py
ctdfjorder/ai/: ai.py
ctdfjorder/cli/: cli.py
ctdfjorder/constants/: constants.py
ctdfjorder/ctddataclasses/: ctddataclasses.py
ctdfjorder/dataclasses/: dataclasses.py
ctdfjorder/exceptions/: ctd_exceptions.py  exceptions.py
ctdfjorder/fjordphyto/: generate_sites_db.py
ctdfjorder/fjordphyto/sitenamesdb/: Chile.csv  Chile.parquet  UK.csv  UK.parquet  USA.csv  USA.parquet
ctdfjorder/loadctd/: aml.py  castaway.py  rsk.py
ctdfjorder/metadata/: master_sheet.py
ctdfjorder/phyto/scardb/: scardb.py
ctdfjorder/pyrsktools/: __init__.py  channeltypes.py
ctdfjorder/scardb/: generate_sites_db.py  scardb.py
ctdfjorder/scardb/sitenamesdb/: Argentina.parquet
ctdfjorder/utils/: utils.py
ctdfjorder/visualize/: ctd_plot.py
docs/: AI.rst  API.rst  CLI.rst  CTD Data Classes.rst  CTD.rst  CTDFjorder.html  Constants.rst  Data Classes.rst  Exceptions.rst  Getting Started.rst  Load CTD.rst  Metadata.rst  Phyto.rst  SCAR Database.rst  Utils.rst  Visualize.rst  changelog.rst  cli-tutorial.rst  conf.py  developers.rst  index.html  index.rst  researchers.rst  search.js
docs/API/: index.rst
docs/API/CLI/: index.rst
docs/API/CTD/: index.rst
docs/API/CTD/Data Cleaning/: clean.rst  filter_columns_by_range.rst  index.rst  remove_non_positive_samples.rst  remove_upcasts.rst
docs/API/CTD/Data Handling/: add_metadata.rst  assert_data_not_empty.rst  expand_date.rst  get_df.rst  index.rst
docs/API/CTD/Derived Calculations/: add_absolute_salinity.rst  add_brunt_vaisala_squared.rst  add_conservative_temperature.rst  add_density.rst  add_dynamic_height.rst  add_haline_contraction_coefficient.rst  add_mean_surface_density.rst  add_meltwater_fraction.rst  add_mld.rst  add_mld_bf.rst  add_n_squared.rst  add_potential_density.rst  add_potential_temperature.rst  add_practical_salinity.rst  add_profile_classification.rst  add_speed_of_sound.rst  add_surface_salinity.rst  add_surface_salinity_temp_meltwater.rst  add_surface_temperature.rst  add_thermal_expansion_coefficient.rst  calculate_mld_salinity_olf.rst  calculate_salinity_olf_mld.rst  index.rst
docs/API/CTD/Exporting Data/: index.rst  save_to_csv.rst
docs/API/Constants/: index.rst
docs/API/Data Classes/: index.rst
docs/API/Load CTD/: index.rst
docs/API/Utils/: index.rst
docs/API/Visualize/: index.rst
docs/CTDFjorder/: CTDFjorder.html
docs/CTDFjorder/CTDFjorder/: CTDFjorder.html
docs/_templates/: changelog.rst.jinja
source/: conf.py  index.rst
tests/: 208039_20211215_1003.rsk  208041_20230120_1643.rsk  230975_20231206_1027.rsk  CC1531002_20181225_114931.csv  __init__.py  test_ctdfjorder.py
