[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ctdfjorder"
version = "0.4.0"
description = "A package for processing and analyzing CTD data."
readme = "README.md"
authors = ["Nikolas Yanek-Chrones <research@icarai.io>"]
license = "MIT"
keywords = ["CTD"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "ctdfjorder"}]

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.1.7"
polars = ">=1.1.0"
psutil = "^6.0.0"
enlighten = ">=1.12.4"
pandas = ">=2.2.2"
setuptools = ">=70.3.0"
openpyxl = ">=3.1.4"
numpy = ">=2.0.0"
gsw = ">=3.6.18"
matplotlib = ">=3.9.1"
statsmodels = ">=0.14.2"
colorlog = ">=6.8.2"
pyarrow = ">=17.0.0"
fastexcel = ">=0.10.4"
rich-argparse = "^1.5.2"
rich = "^13.7.1"
plotly = "^5.20.0"
dash = "^2.17.1"
flask = "^3.0.3"
pytest = "^8.3.1"
rich-argparse-plus = "^0.3.1.4"
scipy = "^1.14.0"
datasketch = "^1.6.5"
scikit-learn = "^1.5.1"

[tool.poetry.urls]
homepage = "https://github.com/nikothomas/ctdfjorder"
issues = "https://github.com/nikothomas/ctdfjorder/issues"

[tool.poetry.scripts]
ctdcli = "ctdfjorder.cli.cli:main"

