[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "ctdfjorder"
version = "0.8.6"
description = "A package for processing and analyzing CTD data."
homepage = "https://github.com/nikothomas/ctdfjorder"
repository = "https://github.com/nikothomas/ctdfjorder"
documentation = "https://ctdfjorder.readthedocs.io"
readme = "README.md"
authors = ["Nikolas Yanek-Chrones <research@icarai.io>"]
license = "MIT"
keywords = ["CTD", "Oceanography", "Python", "RBR", "Castaway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "ctdfjorder"}]

exclude = [
    "ctdfjorder/newsfragments",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
polars = ">=1.4.1"
psutil = "^6.0.0"
numpy = ">=2.0.0"
gsw = ">=3.6.18"
matplotlib = ">=3.9.1post1"
statsmodels = ">=0.14.2"
pyarrow = ">=17.0.0"
fastexcel = ">=0.10.4"
rich-argparse = "^1.5.2"
rich = "^13.7.1"
plotly = "^5.20.0"
dash = "^2.17.1"
flask = "^3.0.3"
scikit-learn = "^1.5.1"
torch = [
    {version = ">=2.4.0", markers = "sys_platform == 'darwin'", source = "pypi"},
    {version = ">=2.4.0", markers = "sys_platform != 'darwin'", source = "torchcpu240"}
]

[[tool.poetry.source]]
name = "torchcpu240"
url = "https://download.pytorch.org/whl/cpu/"
priority = 'supplemental'

[tool.poetry.group.dev.dependencies]
towncrier = "^24.7.1"
pytest = "^8.3.1"
pandas = ">=2.2.2"
sphinx = ">=8.0.2"
sphinx-argparse = "0.5.2"
pydata-sphinx-theme = ">=0.15.4"
sphinx-design = "0.6.1"
sphinx-social-previews = { git = "https://github.com/choldgraf/sphinx-social-previews" }
pytest-cov = "5.0.0"

[tool.poetry.urls]
homepage = "https://github.com/nikothomas/ctdfjorder"
issues = "https://github.com/nikothomas/ctdfjorder/issues"

[tool.poetry.scripts]
ctdcli = "ctdfjorder.cli.cli:main"

[tool.towncrier]
name = "CTDFjorder"
package = "ctdfjorder"
package_dir = "."
filename = "docs/changelog.rst"
version = "0.8.6"
template = "docs/_templates/changelog.rst.jinja"
underlines = ["=", "^", "-", "~"]

[[tool.towncrier.section]]
path = ""

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations (removal in next major release)"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Backward incompatible changes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[tool.poetry2conda]
name = "ctdfjorder-conda"
